--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS';
 }
 #root {
   height: 100vh;
@@ -20,9 +20,15 @@ justify-content: space-between;
 
 .board__section {
   padding: 10px;
+  background-color: gray;
 }
 .board__card {
   background-color: white;
+}
+.profilePhotos {
+  height: 40px;
+  width: 40px;
+  border-radius: 100;
 }
 
 
