--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -5,3 +5,77 @@
 @import './stack';
 @import './profile';
 @import './signin';
+
+html{
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: $dashboardBgColor;
+    color: $textColor;
+    margin: 0;
+    padding: 0;
+}
+.stacks {
+    background-color: $dashboardBgColor;
+    display: flex;
+    flex-direction: space-between;
+}
+.board{
+    background-color: $stacksBgColor;
+    width: 100%;
+}
+.board__wrap{
+    
+}
+.board__section{
+    background-color: $stacksBgColor;
+}
+.boardHeader{
+    text-align: center;
+    padding: 30px 0px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),linear-gradient(90deg, $codeColor, $researchColor, $designColor, $resourcesColor, $testingColor);
+}
+.boardHeader_dtitle{
+    margin: 0;
+    padding-bottom: 20px;
+}
+.boardHeader h3{
+margin: 0;
+}
+.filters{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)),linear-gradient(90deg, $codeColor, $researchColor, $designColor, $resourcesColor, $testingColor);
+}
+.filters__wrapper{
+    display: flex;
+    margin: 0 auto;
+    padding: 15px;
+    width: 40%;
+}
+.filters btn{
+    font-size: .8rem;
+    width: 80px;
+    padding: 8px;
+    margin: 0 auto;
+    background-color: $stacksBgColor;
+    border-radius: 20px;
+    text-align: center;
+}
+#codebtn{
+    background-color: $codeColor;
+}
+#researchbtn{
+    background-color: $researchColor;
+}
+#designbtn{
+    background-color: $designColor;
+}
+#resourcesbtn{
+    background-color: $resourcesColor;
+}
+#testingbtn{
+    background-color: $testingColor;
+}
