--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -16,6 +16,11 @@ body {
     margin: 0;
     padding: 0;
 }
+.stack_title{
+    width: 100%;
+    display: flex;
+    flex-direction:space-between;
+}
 .stacks {
     background-color: $dashboardBgColor;
     display: flex;
@@ -24,12 +29,20 @@ body {
 .board{
     background-color: $stacksBgColor;
     width: 100%;
+    height: 100vh;
+    margin: 30px;
+    padding: 5px;
+    border-radius: 20px 20px 0px 0px;
 }
 .board__wrap{
-    
+    border: none;
+    width: 100%;
 }
 .board__section{
     background-color: $stacksBgColor;
+    margin: 0px;
+    padding-top: 20px;
+    border-radius: 20px 20px 0px 0px;
 }
 .boardHeader{
     text-align: center;
@@ -39,9 +52,6 @@ body {
 .boardHeader_dtitle{
     margin: 0;
     padding-bottom: 20px;
-}
-.boardHeader h3{
-margin: 0;
 }
 .filters{
     width: 100%;
