--- a/src/Sass/_signin.scss
+++ b/src/Sass/_signin.scss
@@ -7,4 +7,8 @@
       margin: 0 auto;
       max-width: 320px;
     }
+    .SigninContainer {
+      margin: 0 auto;
+      max-width: 320px;
+    }
   }
