--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -17,21 +17,37 @@ body {
     margin: 0;
     padding: 0;
 }
-.stack_title{
+.stack_wrapper{
     width: 100%;
     display: flex;
     flex-direction:space-between;
+    justify-content: center;
+}
+.stack_title{
+    width: 25%;
+    text-align: center;
+    margin-bottom: 0px;
 }
 .stacks {
     background-color: $dashboardBgColor;
     display: flex;
     flex-direction: space-between;
 }
+#addcard{
+    position: relative;
+    top: 12px;
+    right: 100px;
+    background-color: $dashboardBgColor;
+    border: none;
+}
+#addcard img{
+    width: 20px;
+}
 .board{
     background-color: $stacksBgColor;
     width: 100%;
     height: 100vh;
-    margin: 30px;
+    margin: 15px 30px 30px 30px;
     padding: 5px;
     border-radius: 20px 20px 0px 0px;
 }
@@ -52,7 +68,8 @@ body {
 }
 .boardHeader_dtitle{
     margin: 0;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .filters{
     width: 100%;
@@ -63,7 +80,7 @@ body {
 .filters__wrapper{
     display: flex;
     margin: 0 auto;
-    padding: 15px;
+    padding: 10px;
     width: 40%;
 }
 .filters btn{
