--- a/src/Sass/_signin.scss
+++ b/src/Sass/_signin.scss
@@ -7,16 +7,16 @@
 .SignIn {
   padding-top: 50px;
 }
-.SignIn form{
+.SignIn__form{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-label {
+.SignIn__label {
   font-size: .7rem;
   padding-top: 10px;
 }
-input {
+.SignIn__input {
   width: 100%;
   border-radius: 5px;
   background-color: $stacksBgColor;
@@ -28,14 +28,14 @@ input {
   justify-content: space-between;
   padding-top: 50px;
 }
-#signinbtn {
+#signupbtn2 {
   background-color: $dashboardBgColor;
   color: white;
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
 }
-#signupbtn {
+#signinbtn2 {
   background-color: white;
   border-radius: 5px;
   padding: 5px 20px;
