--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -72,6 +72,10 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+#addcardbtn{
+    flex-shrink: 0;
+    width: 0%;
+}
 .filters{
     width: 100%;
     display: flex;
@@ -84,7 +88,7 @@ body {
     padding: 10px;
     width: 40%;
 }
-.filters btn{
+.filters button{
     font-size: .8rem;
     width: 80px;
     padding: 8px;
