Small modal changes

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -18,6 +18,12 @@ body {
     margin: 0;
     padding: 0;
 }
+#headavatar{
+    
+}
+#headavatar img{
+
+}
 .stack_wrapper{
     width: 100%;
     display: flex;
