--- a/src/Sass/_signin.scss
+++ b/src/Sass/_signin.scss
@@ -10,7 +10,8 @@
 .SignIn__form{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
+  padding-right: 20px;
 }
 .SignIn__label {
   font-size: .7rem;
