--- a/src/Sass/_signup.scss
+++ b/src/Sass/_signup.scss
@@ -10,7 +10,8 @@
 .SignUp__form{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
+  padding-right: 20px;
 }
 .SignUp__label {
   font-size: .7rem;
@@ -23,6 +24,13 @@
   border: none;
   padding: 10px;
 }
+.SignUp__avatar {
+  width: 60px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .buttons {
   display: flex;
   justify-content: space-between;
