--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -19,10 +19,17 @@ body {
     padding: 0;
 }
 #headavatar{
-    position: relative;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 100px;
+    top: 70px;
+    border-radius: 50%;
+    background-color: none;
 }
 #headavatar img{
-
+    width: auto;
+    height: auto;
 }
 .stack_wrapper{
     width: 100%;
@@ -101,7 +108,9 @@ body {
     margin: 0 auto;
     background-color: $stacksBgColor;
     border-radius: 20px;
+    border: none;
     text-align: center;
+    color: white;
 }
 #codebtn{
     background-color: $codeColor;
