--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -34,6 +34,7 @@ body {
 .stack_wrapper{
     width: 100%;
     display: flex;
+    flex-direction: row;
     flex-direction:space-between;
     justify-content: center;
 }
@@ -49,8 +50,8 @@ body {
 }
 #addcard{
     position: relative;
-    top: 12px;
-    right: 100px;
+    top: 3px;
+    left: 10px;
     background-color: $dashboardBgColor;
     border: none;
 }
