--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,10 +1,8 @@
 .modal__wrapper{
-    
-}
-.modal__body{
     width: 600px;
     height: 500px;
     border-radius: 20px;
-    border: 10px white;
+    border: 10px solid white;
     background-color: $dashboardBgColor;
+    
 } 
