--- a/src/Sass/_signup.scss
+++ b/src/Sass/_signup.scss
@@ -24,13 +24,13 @@
   border: none;
   padding: 10px;
 }
-.SignUp__avatar {
-  width: 60px;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  cursor: pointer;
-}
+// .SignUp__avatar {
+//   width: 60px;
+//   height: auto;
+//   margin-left: auto;
+//   margin-right: auto;
+//   cursor: pointer;
+// }
 
 .buttons {
   display: flex;
@@ -50,15 +50,7 @@
   padding: 5px 20px;
   cursor: pointer;
 }
-
-
-// @media all and (min-width: 480px) {
-//     .Login {
-//       padding: 60px 0;
-//     }
-  
-//     .Login form {
-//       margin: 0 auto;
-//       max-width: 320px;
-//     }
-//   }
+.avatars {
+  display: flex;
+  flex-wrap: wrap;
+}
