--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -4,5 +4,66 @@
     border-radius: 20px;
     border: 10px solid white;
     background-color: $dashboardBgColor;
-    
+}
+.modal__body{
+    padding: 0px 20px 20px 20px;
+}
+.category-wrapper{
+    display: flex;
+    justify-content: center;
+}
+.dropbtn {
+    background-color:$dashboardBgColor;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
 } 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: $stacksBgColor;
+    min-width: 50px;
+    z-index: 1;
+}
+#lowp{
+    width: 40px;
+}
+#medp{
+    width: 40px;
+}
+#highp{
+    width: 40px;
+}
+#blockp{
+    width: 40px;
+}
+#codecategory{
+    background-color: $codeColor;
+}
+#researchcategory{
+    background-color: $researchColor;
+}
+#designcategory{
+    background-color: $designColor;
+}
+#resourcescategory{
+    background-color: $resourcesColor;
+}
+#testingcategory{
+    background-color: $testingColor;
+}
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+    
+.dropdown-content a:hover {background-color: white;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {background-color: grey;}
