--- a/src/Sass/_signup.scss
+++ b/src/Sass/_signup.scss
@@ -36,6 +36,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 50px;
+  padding-bottom: 50px;
 }
 #signinbtn1 {
   background-color: $dashboardBgColor;
