--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -25,7 +25,7 @@ body {
     position: absolute;
     right: 100px;
     top: 70px;
-    border-radius: 50%;
+    border-radius: 20px;
     background-color: none;
 }
 #headavatar img{
@@ -63,8 +63,8 @@ body {
     background-color: $stacksBgColor;
     width: 100%;
     height: 100vh;
-    margin: 15px 30px 30px 30px;
-    padding: 5px;
+    margin: 15px 20px 20px 20px;
+    padding: 0px;
     border-radius: 20px 20px 0px 0px;
 }
 .board__wrap{
