--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -23,3 +23,15 @@
     padding-left: 20px;
     border: 2px solid $testingColor;
 }
+.categorywrapper{
+    position: relative;
+    left: 198px;
+    height: 30px;
+    width: 80px;
+    background-color: $codeColor;
+    border-radius: 10px 0px 6px 0px;
+    text-align: center;
+}
+.categorywrapper h4{
+    padding-top: 5px;
+}
