--- a/src/sass/_avatar.scss
+++ b/src/sass/_avatar.scss
@@ -1,8 +1,15 @@
 .UserAvatars {
-    width: 80px;
-    height: auto;
-    margin: 5px;
+    width: 60px;
+    height: 60px;
+    margin: 15px;
     padding: 15px;
-    border-radius: 100%;
+    border-radius: 20%;
     background-color: $stacksBgColor;
+    cursor: pointer;
+}
+.imageAnchor:focus img {
+    // border: 2px solid yellow;
+    background-color: yellow;
+    padding: 15px 15px;
+    border-radius: 20%;
 }
