simple profile page created/styled, EditProfile.js created for future version

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -4,6 +4,7 @@
 @import './expanded';
 @import './stack';
 @import './profile';
+@import './editprofile';
 @import './signin';
 @import './signup';
 @import './modal';
