--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -15,7 +15,7 @@
 }
 .SignIn__label {
   font-size: .7rem;
-  padding-top: 10px;
+  padding: 25px 0px 10px;
 }
 .SignIn__input {
   width: 100%;
@@ -31,15 +31,21 @@
   padding-top: 50px;
 }
 #signupbtn2 {
-  background-color: $dashboardBgColor;
-  color: white;
-  border-radius: 5px;
-  padding: 10px 20px;
   cursor: pointer;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: solid 2px white;
+  border-radius: 5px;
 }
 #signinbtn2 {
-  background-color: white;
-  border-radius: 5px;
-  padding: 5px 20px;
   cursor: pointer;
+  font-size: .9rem;
+  padding: 10px 20px;
+  border: solid 2px white;
+  border-radius: 5px;
+}
+.red-text{
+  color: red;
 }
