--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -9,6 +9,7 @@
 @import './signup';
 @import './modal';
 @import './avatar';
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 html{
     margin: 0;
@@ -19,6 +20,7 @@ body {
     color: $textColor;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 #headavatar{
     width: 50px;
@@ -26,8 +28,10 @@ body {
     position: absolute;
     right: 100px;
     top: 70px;
-    border-radius: 20px;
-    background-color: none;
+    border-radius: 50%;
+    background-color: white;
+    object-fit: center center;
+    border: none;
 }
 #headavatar img{
     width: auto;
