--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,6 +1,6 @@
 .modal__wrapper{
     width: 600px;
-    height: 500px;
+    height:50%;
     // border-radius: 20px;
     // border: 10px solid white;
     background-color: $dashboardBgColor;
@@ -18,7 +18,7 @@
     padding: 16px;
     font-size: 16px;
     border: none;
-    max-height: 50px;
+    height: 50px;
 } 
 .dropdown {
     position: relative;
@@ -45,7 +45,7 @@
     font-size: 2rem;
 }
 #description{
-    margin-top: 15px;
+    margin-top: 30px;
     width: 95%;
     height: 20%;
     font-size: 1.25rem;
@@ -60,7 +60,7 @@ input{
 }
 #lowp{
     padding: 5px;
-    width: 40px;
+    max-width: 40px;
     cursor: pointer;
 }
 #medp{
@@ -113,6 +113,27 @@ input{
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+}
+#functionbtns{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.saveBtn, .deleteBtn{
+    width: 100px;
+    margin: 40px 20px 20px 20px;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+.saveBtn{
+    background-color: white;
+    border: none;
+    color: black;
+}
+.deleteBtn {
+    background: none;
+    color: red;
+    border-color: red;
 }
     
 .dropdown-content a:hover {background-color: white;}
