--- a/src/sass/_profile.scss
+++ b/src/sass/_profile.scss
@@ -1,6 +1,6 @@
 .ProfileContainer {
     margin: 0 auto;
-    max-width: 360px;
+    max-width: 380px;
     align-content: center;
     padding-top: 100px;
   }
@@ -11,8 +11,18 @@
     width: 100px;
     height: 100px;
     margin: 0 auto;
+    padding-top: 20px;
 }
-
+.Profile__detail{
+  margin-top: 50px;
+  background-color: $stacksBgColor;
+  padding: 20px;
+  border-radius: 10px;
+}
+#backarrow{
+  height: 25px;
+  width: auto;
+}
 //   .Profile__form{
 //     display: flex;
 //     flex-direction: column;
@@ -37,18 +47,21 @@
 //     padding: 25px;
 //   }
   #logoutbtn {
+    margin-top: 20px;
     background-color: red;
     color: white;
     border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
+    border: none;
   }
 
   #backbtn {
-    color: white;
+    background-color: $dashboardBgColor;
     border-radius: 5px;
     padding: 10px 20px;
     cursor: pointer;
+    border: none;
   }
 
 //   #editbtn {
