--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,40 +1,62 @@
 .modal__wrapper{
-    width: 600px;
     height:50%;
-    // border-radius: 20px;
-    // border: 10px solid white;
     background-color: $dashboardBgColor;
 }
 .modal__body{
     padding: 0px 20px 20px 20px;
+    margin-left: 20px;
 }
 .category-wrapper{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    padding: 20px;
+    margin: 0px 20px;
 }
-.dropbtn {
+.catdropbtn {
     background-color:$dashboardBgColor;
     color: white;
     padding: 16px;
     font-size: 16px;
     border: none;
-    height: 50px;
+    margin-right: 50px;
 } 
-.dropdown {
+.catdropdown {
     position: relative;
     display: inline-block;
-    width: 125px;
-    max-height: 300px;
-    align-content:center;
+    align-items:center;
+    text-align: center;
 }
-.dropdown-content {
+.catdropdown-content {
     display: none;
     position: absolute;
     background-color: $stacksBgColor;
     min-width: 50px;
     z-index: 1;
 }
-.dropdown-content span{
+.catdropdown-content span{
+    flex-direction: column;
+}
+.pdropbtn {
+    background-color:$dashboardBgColor;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+} 
+.pdropdown {
+    position: relative;
+    display: inline-block;
+    max-height: 300px;
+    align-content:center;
+}
+.pdropdown-content {
+    display: none;
+    position: absolute;
+    background-color: $stacksBgColor;
+    text-align: center;
+    z-index: 1;
+}
+.pdropdown-content span{
     flex-direction: column;
 }
 .priorities {
@@ -60,28 +82,34 @@ input{
 }
 #lowp{
     padding: 5px;
-    max-width: 40px;
+    max-height: 75%;
+    max-width: 75%;
     cursor: pointer;
 }
 #medp{
     padding: 5px;
-    width: 40px;
+    max-height: 75%;
+    max-width: 75%;
     cursor: pointer;
 }
 #highp{
     padding: 5px;
-    width: 40px;
+    max-height: 75%;
+    max-width: 75%;
     cursor: pointer;
 }
 #blockp{
     padding: 5px;
-    width: 40px;
+    max-height: 75%;
+    max-width: 75%;
     cursor: pointer;
 }
 #codecategory, #researchcategory, #designcategory, #resourcescategory, #testingcategory {
     cursor: pointer;
     padding: 5px;
     margin: 5px;
+    max-height: 75%;
+    max-width: 75%;
 }
 #codecategory{
     background-color: $codeColor;
@@ -108,16 +136,17 @@ input{
     border: 5px solid $testingColor;
     border-radius: 5px;
 }
-.dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
+// .dropdown-content a {
+//     color: white;
+//     padding: 12px 16px;
+//     text-decoration: none;
+//     display: block;
+// }
 #functionbtns{
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    margin-top: 30px;
 }
 .saveBtn, .deleteBtn{
     width: 100px;
@@ -136,6 +165,10 @@ input{
     border-color: red;
 }
     
-.dropdown-content a:hover {background-color: white;}
-.dropdown:hover .dropdown-content {display: flex; flex-direction: column;}
-.dropdown:hover .dropbtn {background-color: grey;}
+.catdropdown-content a:hover {background-color: white;}
+.catdropdown:hover .catdropdown-content {display: flex; flex-direction: column;}
+.catdropdown:hover .catdropbtn {background-color: grey;}
+
+.pdropdown-content a:hover {background-color: white;}
+.pdropdown:hover .pdropdown-content {display: flex; flex-direction: column;}
+.pdropdown:hover .pdropbtn {background-color: grey;}
