Added demo mode to sign-in screen.

--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     // margin: 10px 0px 0px;
     margin-top: 10px;
+    max-height: 180px;
 }
 .board__card--code{
     padding-left: 20px;
