--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -29,9 +29,9 @@ body {
     right: 100px;
     top: 70px;
     border-radius: 50%;
-    background-color: white;
+    background-color: $dashboardBgColor;
     object-fit: center center;
-    border: none;
+    border: solid 2px white;
 }
 #headavatar img{
     width: auto;
@@ -87,10 +87,14 @@ body {
     padding: 30px 0px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)),linear-gradient(90deg, $codeColor, $researchColor, $designColor, $resourcesColor, $testingColor);
 }
+.boardHeader h3{
+    text-align: center;
+    color: rgb(185, 185, 185);
+}
 .boardHeader_title{
     margin: 0;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 #addcardbtn{
     flex-shrink: 0;
