--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -21,6 +21,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    min-width: 1000px;
+    height: 100%;
 }
 #headavatar{
     width: 50px;
@@ -53,6 +55,7 @@ body {
     background-color: $dashboardBgColor;
     display: flex;
     flex-direction: space-between;
+    height: 100%;
 }
 #addcard{
     position: relative;
@@ -81,6 +84,7 @@ body {
     margin: 0px;
     padding-top: 20px;
     border-radius: 20px 20px 0px 0px;
+    height: 100%;
 }
 .boardHeader{
     text-align: center;
@@ -137,4 +141,20 @@ body {
 }
 #testingbtn{
     background-color: $testingColor;
+}
+
+@media (max-width: 830px) {
+    .boardHeader{
+        text-align: left;
+        padding: 20px 35px;
+        font-size: .5rem;
+    }
+    .boardHeader h3{
+        text-align: left;
+        font-size: .8rem;
+    }
+    #headavatar{
+        right: 30px;
+        top: 35px;
+    }
 }
