--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,7 +1,8 @@
 .modal__wrapper{
-    height:70%;
+    height:100%;
     background-color: $dashboardBgColor;
     border-radius: 5px;
+    min-width: 325px;
 }
 .modal__body{
     padding: 0px 20px 20px 20px;
@@ -14,9 +15,6 @@
     text-align: center;
 }
 .category-wrapper2{
-    // display: inline-block;
-    // padding: 20px;
-    // margin: 0px 40px 0px 20px;
     text-align: center;
     height: 50px;
     margin: 40px 20px 20px 20px;
@@ -48,8 +46,7 @@
 .pdropbtn {
     background-color:$dashboardBgColor;
     color: white;
-    padding: 16px;
-    font-size: 16px;
+    padding: 20px;
     border: none;
 } 
 .pdropdown {
@@ -77,7 +74,7 @@
 }
 #description{
     margin-top: 30px;
-    width: 95%;
+    width: 100%;
     height: 20%;
     font-size: 1.25rem;
     background-color: $dashboardBgColor;
@@ -145,12 +142,6 @@ input{
     border: 5px solid $testingColor;
     border-radius: 5px;
 }
-// .dropdown-content a {
-//     color: white;
-//     padding: 12px 16px;
-//     text-decoration: none;
-//     display: block;
-// }
 #functionbtns{
     width: 100%;
     display: flex;
@@ -182,3 +173,30 @@ input{
 .pdropdown-content a:hover {background-color: white;}
 .pdropdown:hover .pdropdown-content {display: flex; flex-direction: column;}
 .pdropdown:hover .pdropbtn {background-color: grey;}
+
+@media (max-width: 830px) {
+    .modal__wrapper{
+        width: 100%;
+    }
+    .modal__body{
+        padding: 0px 20px 0px 0px;
+    }
+    .category-wrapper2{
+        margin: 10px 10px 10px 10px;
+    }
+    .pdropbtn {
+        padding: 16px;
+    }
+    #functionbtns{
+        flex-direction: column;
+        margin-top: 40px;
+        align-items: center;
+    }
+    .saveBtn, .deleteBtn{
+        margin: 10px 10px 10px 10px;
+        padding: 10px 8px;
+    }
+    .deleteBtn {
+        margin-top: 40px;
+    }
+}
